# High-Performance-Computing-Portfolio

./: CMakeLists.txt  Lid-Driven-Cavity.ipynb  LidDrivenCavity.cpp  LidDrivenCavity.h  LidDrivenCavitySolver.cpp  Makefile  MpiImplementation.cpp  MpiImplementation.h  PoissonSolver.cpp  PoissonSolver.h  ProgramInputs.cpp  ProgramInputs.h  README.md  RunSolver.sh  Solve  SpeedBatch.sh  executionTimes.txt
Plot/: 1_1_161_161_1000_data.txt  1_1_161_161_100_data.txt  1_1_161_161_3200_data.txt  1_1_161_161_400_data.txt  1_1_5_5_100_data.txt  1_2_161_161_100_data.txt  2_1_161_161_100_data.txt
